# decent-sync-osc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.rpi-zero  colorPalette.h  glob.h  main.cpp  main.h  main.py  motor.cpp  motor.h  receiver.cpp  receiver.h  rotate.c  rpi-toolchain.cmake  sender.cpp  sender.h
.github/workflows/: cross-compile-rpiz2w.yml
sc/: osc_simple.scd
